--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app{
-  height: 100%;
-  width: 100%;
+  height: 100svh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   overflow: hidden;
