--- a/src/components/objectEditBar/ObjectEditBar.css
+++ b/src/components/objectEditBar/ObjectEditBar.css
@@ -21,6 +21,20 @@
     font-weight: 700;
 }
 
+.editor-head-cross{
+    position: absolute;
+    right: 8px;
+    height: 14px;
+    width: 14px;
+    border-radius: 16px;
+    padding: 4px;
+}
+
+.editor-head-cross:hover{
+    background-color: rgb(100, 100, 100);
+    cursor: pointer;
+}
+
 .object-editor-container{
     padding: 8px;
 }
@@ -53,6 +67,7 @@
 }
 .editor-input{
     padding: 0;
+    text-align: center;
 }
 /* .editor-button{
     width: 50px;
